<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>PairwiseAlignmentHirschbergOptionsPanelMainWidget</class>
 <widget class="QWidget" name="PairwiseAlignmentHirschbergOptionsPanelMainWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>144</width>
    <height>199</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout_2">
   <property name="spacing">
    <number>5</number>
   </property>
   <property name="sizeConstraint">
    <enum>QLayout::SetMinAndMaxSize</enum>
   </property>
   <property name="margin">
    <number>0</number>
   </property>
   <item>
    <layout class="QVBoxLayout" name="gapOpenLayout">
     <property name="spacing">
      <number>3</number>
     </property>
     <property name="sizeConstraint">
      <enum>QLayout::SetMinAndMaxSize</enum>
     </property>
     <item>
      <widget class="QLabel" name="gapOpenLabel">
       <property name="text">
        <string>Gap open penalty</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QDoubleSpinBox" name="gapOpen"/>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QVBoxLayout" name="gapExtdLayout">
     <property name="spacing">
      <number>3</number>
     </property>
     <property name="sizeConstraint">
      <enum>QLayout::SetMinAndMaxSize</enum>
     </property>
     <item>
      <widget class="QLabel" name="gapExtdLabel">
       <property name="text">
        <string>Gap extension penalty</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QDoubleSpinBox" name="gapExtd"/>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QVBoxLayout" name="gapTermLayout">
     <property name="spacing">
      <number>3</number>
     </property>
     <property name="sizeConstraint">
      <enum>QLayout::SetMinAndMaxSize</enum>
     </property>
     <item>
      <widget class="QLabel" name="gapTermLabel">
       <property name="text">
        <string>Terminate gap penalty</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QDoubleSpinBox" name="gapTerm"/>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QVBoxLayout" name="bonusScoreLayout">
     <property name="spacing">
      <number>3</number>
     </property>
     <property name="sizeConstraint">
      <enum>QLayout::SetMinAndMaxSize</enum>
     </property>
     <item>
      <widget class="QLabel" name="bonusScoreLabel">
       <property name="text">
        <string>Bonus score</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QDoubleSpinBox" name="bonusScore"/>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
